[package]
name = "rust"
version = "1.0.0"
authors = ["Alexander F Rødseth <rodseth@gmail.com>"]
exclude = [
    "main.cpp",
    "*.pro*",
    "Makefile",
]

[dependencies]
docopt = "1"
serde = "1.0"
serde_derive = "1.0"

[lib]
name = "smileypyramid"
path = "rust/lib.rs"

[[bin]]
name = "smileypyramid"
path = "rust/bin.rs"
